feat(bot) detect bot: Vercelbot
issue #6361

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3740,3 +3740,10 @@
     name: Seobility
     category: Crawler
     url: 'https://www.seobility.net/en/faq/?category=crawling#!aboutourbot'
+
+-
+  user_agent: Vercelbot (+https://vercel.com)
+  bot:
+    name: Vercel Bot
+    category: Service bot
+    url: https://vercel.com
