--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2040,8 +2040,6 @@
     name: 'Carbon60 Operating Co. Ltd.'
     url: 'https://www.carbon60.com/'
 
-# Generic detections
-
 - regex: 'Nutch'
   name: 'Nutch-based Bot'
   category: 'Crawler'
@@ -2054,6 +2052,13 @@
   name: 'Seobility'
   category: 'Crawler'
   url: 'https://www.seobility.net/en/faq/?category=crawling#!aboutourbot'
+
+- regex: 'Vercelbot'
+  name: 'Vercel Bot'
+  category: 'Service bot'
+  url: 'https://vercel.com'
+
+# Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
   name: 'Generic Bot'
