feat(bot) detect bot: Grammarly
issue #6315

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3747,3 +3747,11 @@
     name: Vercel Bot
     category: Service bot
     url: https://vercel.com
+
+-
+  user_agent: Grammarly/1.0 (http://www.grammarly.com)
+  bot:
+    name: Grammarly
+    category: Service bot
+    url: http://www.grammarly.com
+
