--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2058,6 +2058,11 @@
   category: 'Service bot'
   url: 'https://vercel.com'
 
+- regex: 'Grammarly'
+  name: 'Grammarly'
+  category: 'Service bot'
+  url: 'http://www.grammarly.com'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
