feat(bot) detect bot: Domains Project feat(bot) detect bot: Robozilla

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3755,3 +3755,15 @@
     category: Service bot
     url: http://www.grammarly.com
 
+-
+  user_agent: Robozilla/1.0
+  bot:
+    name: Robozilla
+    category: Crawler
+
+-
+  user_agent: Mozilla/5.0 (compatible; Domains Project/1.1.0; +https://domainsproject.org)
+  bot:
+    name: Domains Project
+    category: Crawler
+    url: https://domainsproject.org
