--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4197,12 +4197,12 @@ Eton:
 
 # Essentielb
 Essentielb:
-  regex: '(?:Wooze[_ ](?:I5|L|XL)|HEYOU[135])[);/ ]'
+  regex: '(?:Wooze[_ ](?:I55?|L|XL)|HEYOU[135])[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'HEYOU([135])[);/ ]'
       model: 'HEYou $1'
-    - regex: '(Wooze[_ ](?:I5|L|XL))[);/ ]'
+    - regex: '(Wooze[_ ](?:I55?|L|XL))[);/ ]'
       model: '$1'
 
 # Rikomagic
@@ -5532,7 +5532,7 @@ Minix:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-(?:[AT]N00|NX9)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a?|TAH-AN00m|C8817D|T1-821W|d-01J|d-02[HK]|HWT31|Y320-U10|Y541-U02'
+  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-(?:[AT]N00|NX9)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a?|TAH-AN00m|C8817D|T1-821W|d-01J|d-02[HK]|HWT31|Y320-U10|Y541-U02|VAT-L19'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a[);/ ]'
@@ -5691,7 +5691,7 @@ Huawei:
       model: 'Honor 7S'
     - regex: '(?:HONOR[ _]?)?BND-(?:AL[01]0|TL10|L2[14]|L31)[);/ ]'
       model: 'Honor 7X'
-    - regex: 'FRD-(?:AL[01]0|L0[249]|L1[49]|DL00)[);/ ]'
+    - regex: '(?:FRD-(?:AL[01]0|L0[249]|L1[49]|DL00)|VAT-L19)[);/ ]'
       model: 'Honor 8'
     - regex: 'PRA-(?:AL00X|AL00|TL10)[);/ ]'
       model: 'Honor 8 Lite'
@@ -11994,6 +11994,10 @@ Turbo-X:
   models:
     - regex: 'Turbox_S3'
       model: 'S3'
+    - regex: 'Turbo-X_A2[);/ ]'
+      model: 'A2'
+    - regex: 'Turbo-X_e3[);/ ]'
+      model: 'E3'
     - regex: 'Turbo-X Ice[);/ ]'
       device: 'tablet'
       model: 'Ice'
@@ -12009,11 +12013,13 @@ Turbo-X:
 
 # Turbo
 Turbo:
-  regex: 'Turbo[_ ]?(?:X5[_ ]?(?:Max|Black|Space)|X8|X6[ _]Z|X[ _]Ray)[);/ ]'
+  regex: 'Turbo[_ ]?(?:X5[_ ]?(?:Max|Black|Space|Hero)|X8|X6[ _]Z|X[ _]Ray)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'TurboX5Space[);/ ]'
       model: 'X5 Space'
+    - regex: 'TurboX5Hero[);/ ]'
+      model: 'X5 Hero'
     - regex: 'TurboX[ _]Ray[);/ ]'
       model: 'X Ray'
     - regex: 'Turbo[ _]?X5[ _]?Black[);/ ]'
@@ -13019,7 +13025,7 @@ Verykool:
 
 # Vestel
 Vestel:
-  regex: 'Venus[ _](GO|V[1-9]|Z[1-9]0)|V_?TAB|VP74|VT97PRO|VSP145M|VSP250[GS]|VSP355[GS]'
+  regex: 'Venus[ _](GO|V[1-9]|Z[1-9]0)|V_?TAB|VP74|VT97PRO|VSP145M|VSP250[GS]|VSP355[GS]|V3_5580_Dual'
   device: 'smartphone'
   models:
     - regex: 'VT97PRO'
@@ -13037,6 +13043,8 @@ Vestel:
     - regex: 'V_TAB_([0-9]{4}[A-Z]?)'
       model: 'VTab $1'
       device: 'tablet'
+    - regex: 'V3_5580_Dual'
+      model: 'Venus V3 5580 Dual'
     - regex: 'VSP145M'
       model: 'Venus 4.5'
     - regex: 'VSP250G'
@@ -16274,3 +16282,8 @@ Jinga:
       model: 'IGO L2'
     - regex: 'JINGA_IGO_M1[);/ ]'
       model: 'IGO M1'
+
+Twoe:
+  regex: 'TWOE[-_ ](E450R)[);/ ]'
+  device: 'smartphone'
+  model: '$1'
