feat(device) detect  brand MLS models: Life 10.1" (iQ9013 4N), Alu Plus 4G 10.1" (IQ1019N),  iQTab Ideal 8.0" (iQ1805N), iQTab Care 8.0" (iQ181011N), MX 4G (iQE200), Alu 5.5" (IQW553N),  Color Fingerprint 4G (iQD700)
issue #6355

--- a/Tests/fixtures/smartphone-7.yml
+++ b/Tests/fixtures/smartphone-7.yml
@@ -9536,7 +9536,7 @@
   device:
     type: smartphone
     brand: LS
-    model: Alu 5.5
+    model: Alu 5.5"
   os_family: Android
   browser_family: Unknown
 - 
