--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14077,7 +14077,7 @@ Vivax:
 
 # MLS
 MLS:
-  regex: 'IQ(?:0705|L550|1010w?|1012|1025|1380|1401|1436|1452a|1453|1470|1502a|1511|1552|1553|1568|1570|1806|1808|1810B_M|1832|1850|1890|5017|9610|E100|EL41|G550|GW516|L30|L5[01]|M801|M1001|N700|P50|R300|S300|S1001|W503|W511T|W553|W60[38]|W626|M960)[;)/ ]'
+  regex: 'IQ(?:0705|L550|1010w?|1012N?|1019N|1025|1380|1401|1436|1452a|1453|1470|1502a|1511|1552|1553|1568|1570|1805N|1806|1808|1810B_M|1832|1850|1890|5017|9610|181011N|E[12]00|EL41|G550|GW516|L30|L5[01]|M801|M1001|N700|P50|R300|S300|S1001|W503|W511T|W553N?|W60[38]|W626|M960|D700|9013_4N)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: 'IQ0705[;)/ ]'
@@ -14087,11 +14087,23 @@ MLS:
     - regex: 'IQ1010W?[;)/ ]'
       model: 'iQTab 10'
       device: 'tablet'
-    - regex: 'IQ1012[;)/ ]'
+    - regex: 'IQ1012N?[;)/ ]'
       model: 'iQTab Brave 3G'
       device: 'tablet'
     - regex: 'IQ1025[;)/ ]'
       model: 'iQTab Action 4G'
+      device: 'tablet'
+    - regex: 'iQ9013_4N[;)/ ]'
+      model: 'Life 10.1"'
+      device: 'tablet'
+    - regex: 'IQ1019N[;)/ ]'
+      model: 'Alu Plus 4G 10.1"'
+      device: 'tablet'
+    - regex: 'iQ1805N[;)/ ]'
+      model: 'iQTab Ideal 8.0"'
+      device: 'tablet'
+    - regex: 'iQ181011N[;)/ ]'
+      model: 'iQTab Care 8.0"'
       device: 'tablet'
     - regex: 'IQ1380[;)/ ]'
       model: 'Brain 3G'
@@ -14147,6 +14159,8 @@ MLS:
       model: 'F5'
     - regex: 'IQE100[;)/ ]'
       model: 'Energy 4G'
+    - regex: 'iQE200[;)/ ]'
+      model: 'MX 4G'
     - regex: 'IQEL41[;)/ ]'
       model: 'Fab 4G'
     - regex: 'IQL30[;)/ ]'
@@ -14181,10 +14195,12 @@ MLS:
       model: 'D6 4G'
     - regex: 'IQW511T[;)/ ]'
       model: 'Liberal'
-    - regex: 'IQW553[;)/ ]'
-      model: 'Alu 5.5'
+    - regex: 'IQW553N?[;)/ ]'
+      model: 'Alu 5.5"'
     - regex: 'IQW503[;)/ ]'
       model: 'Flame 4G (2018)'
+    - regex: 'iQD700[;)/ ]'
+      model: 'Color Fingerprint 4G'
 
 # Fly
 Fly:
