feat(device) detect new brand Torex model: PS12 feat(device) detect brand Alcatel model: One Touch Pixi 4 4" (4034L EEA) feat(device) detect brand Karbonn model: Titanium Vista 4G feat(device) detect brand ArmPhone model: TSD Quadra A0509P feat(device) detect brand Telego model: Joy 2 feat(device) detect brand 2E model: E450 (2018)
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1074,7 +1074,7 @@ Arian Space:
 
 # Alcatel
 Alcatel:
-  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGX]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|A621BL|4114E|5001[ADJTU](?:_EEA|_RU)?|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJ](?:_RU|_EEA)?|5025[DEG]|5026[ADJ]|5027B|5028A|5032W|5033[AX]|5033[DJ](?:[ _]RU)?|5034D(_RU)?|5036D|5038[ADEX]|5041[CD]|5042[ADEFGWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048A|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[AD](_RU)?|5053A|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY](_RU)?|5059[ADXYZ](_RU)?|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI](_RU)?|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6043[AD]|6044D|6045[BFIKOYX]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|8030Y|8050[DEGX]|8063|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9010X|9022X|9027[FTWX]|9203A|A570BL|I213|I216X|A50[13]DL|A574BL|A57[17]VL|A464BG|5028Y[_ ]EEA|5048Y[_ ]EEA)[);/ ]|TIMXL'
+  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034L_EEA|4034[ADEFGX]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|A621BL|4114E|5001[ADJTU](?:_EEA|_RU)?|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJ](?:_RU|_EEA)?|5025[DEG]|5026[ADJ]|5027B|5028A|5032W|5033[AX]|5033[DJ](?:[ _]RU)?|5034D(_RU)?|5036D|5038[ADEX]|5041[CD]|5042[ADEFGWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048A|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[AD](_RU)?|5053A|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY](_RU)?|5059[ADXYZ](_RU)?|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI](_RU)?|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6043[AD]|6044D|6045[BFIKOYX]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|8030Y|8050[DEGX]|8063|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9010X|9022X|9027[FTWX]|9203A|A570BL|I213|I216X|A50[13]DL|A574BL|A57[17]VL|A464BG|5028Y[_ ]EEA|5048Y[_ ]EEA)[);/ ]|TIMXL'
   device: 'smartphone'
   models:
     - regex: '(?:5022[EDX]|5070D)[);/ ]'
@@ -1230,7 +1230,7 @@ Alcatel:
       device: 'tablet'
     - regex: '4017[ADEFSX][);/ ]'
       model: 'One Touch Pixi 4 3.5"'
-    - regex: '4034[ADEFGX][);/ ]'
+    - regex: '4034(?:[ADEFGX]|L_EEA)[);/ ]'
       model: 'One Touch Pixi 4 4"'
     - regex: '4060[SW][);/ ]'
       model: 'One Touch Pixi 4 4.5"'
@@ -8130,7 +8130,7 @@ Konrow:
 
 # Karbonn
 Karbonn:
-  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9 Music 4G|K9 Smart|K9 VIRAAT 4G'
+  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Titanium Vista 4G'
   device: 'smartphone'
   models:
     - regex: 'K9 Kavach 4G'
@@ -8153,6 +8153,8 @@ Karbonn:
       model: 'Titanium S2 Plus'
     - regex: 'Titanium_S99'
       model: 'Titanium S99'
+    - regex: 'Titanium Vista 4G'
+      model: 'Titanium Vista 4G'
     - regex: 'Karbonn ([a-z0-9]+) WAP-Browser'
       model: '$1'
       device: 'feature phone'
@@ -10060,6 +10062,12 @@ PCD Argentina:
   models:
     - regex: 'PCD[ ]?(50[689])'
       model: '$1'
+
+# ArmPhone
+ArmPhone:
+  regex: '(TSD Octa A0520P|TSD Quadra A0509P)[);/ ]'
+  device: 'smartphone'
+  model: '$1'
 
 # Pentagram
 Pentagram:
@@ -12576,6 +12584,8 @@ Telego:
   models:
     - regex: 'TELEGO-W503'
       model: 'W503'
+    - regex: 'Telego_JOY2'
+      model: 'Joy 2'
 
 # Telenor
 Telenor:
@@ -15578,12 +15588,6 @@ Uhans:
   device: 'smartphone'
   model: '$1'
 
-# ArmPhone
-ArmPhone:
-  regex: '(TSD Octa A0520P)[);/ ]'
-  device: 'smartphone'
-  model: '$1'
-
 # Soyes
 Soyes:
   regex: 'SOYES[ _]([67]S)[);/ ]'
@@ -16246,9 +16250,13 @@ BB Mobile:
 
 # 2E (2e.ua)
 2E:
-  regex: 'E500A_2019[);/ ]'
+  regex: '(?:E500A_2019|2E E450 2018)[);/ ]'
   device: 'smartphone'
-  model: 'E500A (2019)'
+  models:
+    - regex: 'E500A_2019[);/ ]'
+      model: 'E500A (2019)'
+    - regex: '2E E450 2018[);/ ]'
+      model: 'E450 (2018)'
 
 # Billion
 Billion:
@@ -16325,3 +16333,9 @@ iTruck:
   regex: 'iTRUCK 7 3G[);/ ]'
   device: 'smartphone'
   model: '7.0" 3G'
+
+# Torex
+Torex:
+  regex: 'TOREX-(PS12)[);/ ]'
+  device: 'tablet'
+  model: '$1'
