feat(device) detect brand Alcatel models: 1(5003D, 5003G, 5033D, 5033D EEA, 5033E, 5033F EEA, 5033G, 5033M, 5033O, 5033T, 5033X EEA, 5033Y) feat(device) detect brand Thomson model: 5014G fix(device) change device name One Touch 5033D => 1 for brand Alcatel
issue #6355

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -1276,7 +1276,7 @@
   device:
     type: smartphone
     brand: AL
-    model: One Touch 5033D
+    model: "1"
   os_family: Android
   browser_family: Unknown
 - 
