feat(device) detect new brand Oyyu model: T11 feat(device) detect new brand Primux model: Delta 6 feat(device) detect brand Phicomm model: Energy 3+ feat(device) detect brand Google model: Pixel 2 (G011A) feat(app) detect app Viber feat(app) detect app Siri
issue #6355

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -221,3 +221,11 @@
     type: mobile app
     name: Snapchat
     version: 10.77.0.54
+
+-
+    user_agent: Siri/1 CFNetwork/1128.0.1 Darwin/19.6.0
+    client:
+      type: mobile app
+      name: Siri
+      version: "1.0"
+
