--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -249,3 +249,11 @@
 - regex: 'HeyTapBrowser/([\d\.]+)'
   name: 'HeyTapBrowser'
   version: '$1'
+
+- regex: 'Viber/([\d\.]+)'
+  name: 'Viber'
+  version: '$1'
+
+- regex: 'Siri/1'
+  name: 'Siri'
+  version: '1.0'
