--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5278,7 +5278,7 @@ Goly:
 
 # Google
 Google:
-  regex: 'Nexus|GoogleTV|Glass(?<!Browser)|CrKey[^a-z0-9]|Pixel(?: Build|\))|Pixel (?:XL|C|[2-4]|[2-4] XL)|Google 2XL'
+  regex: 'Nexus|GoogleTV|Glass(?<!Browser)|CrKey[^a-z0-9]|Pixel(?: Build|\))|Pixel (?:XL|C|[2-4]|[2-4] XL)|Google 2XL|G011A'
   device: 'smartphone'
   models:
     - regex: 'Glass'
@@ -5317,7 +5317,7 @@ Google:
       model: 'Pixel 4 XL'
     - regex: 'pixel 4'
       model: 'Pixel 4'
-    - regex: 'Pixel 2'
+    - regex: 'Pixel 2|G011A'
       model: 'Pixel 2'
     - regex: 'Google 2XL'
       model: 'Pixel 2 XL'
@@ -15647,6 +15647,8 @@ Phicomm:
       model: 'Clue L'
     - regex: 'E653\(ENERGY L\)[);/ ]'
       model: 'Energy L'
+    - regex: 'PHICOMM ENERGY 3\+[);/ ]'
+      model: 'Energy 3+'
     - regex: 'CLUE (2S|M)[);/ ]'
       model: 'Clue $1'
 
@@ -16361,3 +16363,17 @@ Doffler:
   regex: '(24DHS54)[);/ ]'
   device: 'tv'
   model: '$1'
+
+# Oyyu
+Oyyu:
+  regex: 'OYYUT11[);/ ]'
+  device: 'tablet'
+  model: 'T11 3G'
+
+# Primux
+Primux:
+   regex: 'Primux'
+   device: 'smartphone'
+   models:
+     - regex: 'PrimuxDelta6[);/ ]'
+       model: 'Delta 6'
