feat(device) detect new brand iMars model: Vega X7 feat(device) detect brand Umax model: VisionBook 8Qa 3G
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15292,11 +15292,13 @@ Qumo:
 
 # Umax
 Umax:
-  regex: 'VisionBook[ _]'
+  regex: 'VisionBook[ _]|8Qa_3G[;)/ ]'
   device: 'tablet'
   models:
     - regex: '(VisionBook[ _](?:10Qi|7Q[i]?|8Q[e]?)(?:[ _](?:[34]G|Plus|LTE))?)[;)/ ]'
       model: '$1'
+    - regex: '8Qa_3G[;)/ ]'
+      model: 'VisionBook 8Qa 3G'
     - regex: '(VisionBook[ _](?:P50 LTE|P55 LTE(?: Pro)?))[;)/ ]'
       device: 'smartphone'
       model: '$1'
@@ -16389,3 +16391,9 @@ Primux:
    models:
      - regex: 'PrimuxDelta6[);/ ]'
        model: 'Delta 6'
+
+# iMars
+iMars:
+  regex: 'IMARS VEGA X7[);/ ]'
+  device: 'smartphone'
+  model: 'Vega X7'
