feat(device) detect brand MyPhone model: myA17
issue #6366

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8996,7 +8996,7 @@ MyTab:
 
 # myphone
 MyPhone:
-  regex: '(?:MyPhone|MyPad|MyTab)[ _][^;/)]+( Build|\))|Cube_LTE|myTab10II|HAMMER[ _](Blade2_PRO|ENERGY|Titan 2|AXE[_ ](?:M[_ ]LTE|Pro)|Iron 2|Active[2]?(_LTE)?)|C-Smart_pix|myPhone_Fun_8'
+  regex: '(?:MyPhone|MyPad|MyTab)[ _][^;/)]+( Build|\))|Cube_LTE|myTab10II|HAMMER[ _](Blade2_PRO|ENERGY|Titan 2|AXE[_ ](?:M[_ ]LTE|Pro)|Iron 2|Active[2]?(_LTE)?)|C-Smart_pix|myPhone_Fun_8|myA17'
   device: 'smartphone'
   models:
     - regex: 'MyPad[ _]([^;/]+) Build'
@@ -9030,6 +9030,8 @@ MyPhone:
       model: 'Hammer Blade 2 Pro'
     - regex: 'C-Smart_pix'
       model: 'C-Smart Pix'
+    - regex: 'myA17[);/ ]'
+      model: 'myA17'
     - regex: 'myPhone_Fun_8'
       model: 'FUN 8'
     - regex: 'MyPhone[ _]([^;/)]+)( Build|\))'
