feat(device) detect brand Medion models: Life E4504, Life E5004, Life E5020, Life P5015
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8422,12 +8422,10 @@ Medion:
     - regex: '(?:MD_)?LIFETAB_([a-z0-9]+)'
       device: 'tablet'
       model: 'Lifetab $1'
-    - regex: 'X5001'
-      model: 'Life X5001'
-    - regex: '(B5530)'
+    - regex: '(E450[46]|E5004|S5004|X5001|E5020|P5015)[);/ ]'
+      model: 'Life $1'
+    - regex: '(B5530)[);/ ]'
       model: '$1'
-    - regex: 'S5004'
-      model: 'Life S5004'
     - regex: '(E10[45]1X)[);/ ]'
       device: 'tablet'
       model: '$1'
