feat(device) detect new brand MiXzo model: ME1030 3G feat(device) detect brand Mito model: A230 feat(device) detect brand MTC model: Smart Start 2 feat(device) detect brand Goophone models: I6S (MKU82ZP), I6S Plus (MNGW2CH), I7 (MNH02CH), I7 Plus (MNRM2CH)
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15022,7 +15022,7 @@ Lemhoov:
       model: '$1'
 # MTC
 MTC:
-  regex: 'MTC[ _](968|97[82]|970|982[OT]?|1078)|(?:MTC[_ ])?SMART[ _]?(?:Race[2]?|Sprint|Run|Surf[2]?)[ _]4G|MTC975|MTC SMART Run'
+  regex: 'MTC[ _](968|97[82]|970|982[OT]?|1078)|(?:MTC[_ ])?SMART[ _]?(?:Race[2]?|Sprint|Run|Surf[2]?)[ _]4G|MTC975|MTC[ _]SMART[ _](?:Run|Start_2)'
   device: 'smartphone'
   models:
     - regex: 'MTC[ _]?(97[258]|970[H]?|982[OT]?|968)'
@@ -15036,6 +15036,8 @@ MTC:
       model: 'Smart Race 2 4G'
     - regex: '(MTC_)?SMART[ _]Sprint[ _]4G'
       model: 'Smart Sprint 4G'
+    - regex: '(MTC_)?SMART[ _]Start_2'
+      model: 'Smart Start 2'
     - regex: 'SMART[ _]?Run(?:[ _]4G)?'
       model: 'Smart Run 4G'
     - regex: 'SMART[ _]Surf2[ _]4G'
@@ -15788,16 +15790,20 @@ Droxio:
 
 # Goophone
 Goophone:
-  regex: '(?:M(G492|L7[JK]2)CH|MN(4A2|8J2)ZP|MGA92ZP)[/]A[);/ ]'
+  regex: '(?:M(G492|L7[JK]2)CH|MN(4A2|8J2)ZP|MGA92ZP|MKU82ZP|MNGW2CH|MNH02CH|MNRM2CH)[/]A[);/ ]'
   device: 'smartphone'
   models:
-    - regex: '(MG492CH|MGA92ZP)[/]A[);/ ]'
+    - regex: '(?:MG492CH|MGA92ZP)[/]A[);/ ]'
       model: 'I6 Plus'
     - regex: 'ML7[JK]2CH[/]A[);/ ]'
       model: 'I6'
-    - regex: 'MN4A2ZP[/]A[);/ ]'
+    - regex: 'MKU82ZP[/]A[);/ ]'
+      model: 'I6S'
+    - regex: 'MNGW2CH[/]A[);/ ]'
+      model: 'I6S Plus'
+    - regex: '(?:MN4A2ZP|MNH02CH)[/]A[);/ ]'
       model: 'I7'
-    - regex: 'MN8J2ZP[/]A[);/ ]'
+    - regex: '(?:MN8J2ZP|MNRM2CH)[/]A[);/ ]'
       model: 'I7 Plus'
 
 # PocketBook
@@ -15871,10 +15877,10 @@ VKworld:
 
 # Mito
 Mito:
-  regex: 'MITO[- _](A(?:1[08]|55|180|260|313|322|33|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950)|T(?:10|35|3[03]0|510|888)|311)[);/ ]'
+  regex: 'MITO[- _](A(?:1[08]|55|180|2[36]0|313|322|33|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950)|T(?:10|35|3[03]0|510|888)|311)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'MITO[ _](A(?:1[08]|55|180|260|33|322|313|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950))[);/ ]'
+    - regex: 'MITO[ _](A(?:1[08]|55|180|2[36]0|33|322|313|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950))[);/ ]'
       model: '$1'
     - regex: 'MITO-(311)[);/ ]'
       model: '$1'
@@ -16108,7 +16114,7 @@ Owwo:
 
 # TD Systems
 TD Systems:
-  regex: '(K32DLX9HS|K40DLX9FS)[);/ ]'
+  regex: '(K32DLX9HS|K40DLM8FS|K40DLX9FS)[);/ ]'
   device: 'tv'
   model: '$1'
 
@@ -16455,3 +16461,9 @@ Vsmart:
       model: 'Active 1 Plus'
     - regex: 'Bee 3[);/ ]'
       model: 'Bee 3'
+
+# MiXzo
+MiXzo:
+  regex: 'MiXzo ME1030_3G[);/ ]'
+  device: 'tablet'
+  model: 'ME1030 3G'
