feat(bot) detect bot: Petal Bot

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2072,6 +2072,11 @@
   category: 'Crawler'
   url: 'https://domainsproject.org'
 
+- regex: 'PetalBot;\+'
+  name: 'Petal Bot'
+  category: 'Crawler'
+  url: 'https://aspiegel.com/petalbot'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
