--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3767,3 +3767,11 @@
     name: Domains Project
     category: Crawler
     url: https://domainsproject.org
+
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0;) AppleWebKit/537.36 (KHTML, like Gecko) Mobile Safari/537.36 (compatible; PetalBot;+https://aspiegel.com/petalbot)
+  bot:
+    name: Petal Bot
+    category: Crawler
+    url: https://aspiegel.com/petalbot
+
