feat(bot) detect bot: Serendeputy Bot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3775,3 +3775,10 @@
     category: Crawler
     url: https://aspiegel.com/petalbot
 
+-
+  user_agent: SerendeputyBot/0.8.6 (http://serendeputy.com/about/serendeputy-bot)
+  bot:
+    name: Serendeputy Bot
+    category: Crawler
+    url: http://serendeputy.com/about/serendeputy-bot)
+
