--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2072,10 +2072,15 @@
   category: 'Crawler'
   url: 'https://domainsproject.org'
 
-- regex: 'PetalBot;\+'
+- regex: 'PetalBot'
   name: 'Petal Bot'
   category: 'Crawler'
   url: 'https://aspiegel.com/petalbot'
+
+- regex: 'SerendeputyBot'
+  name: 'Serendeputy Bot'
+  category: 'Crawler'
+  url: 'http://serendeputy.com/about/serendeputy-bot)'
 
 # Generic detections
 
