feat(app) detect app: Twitter for Android & Darwin

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -227,6 +227,15 @@
   name: 'Twitter'
   version: '$1'
 -
+  regex: 'Twitter/([\d\.]+)'
+  name: 'Twitter'
+  version: '$1'
+-
+  regex: 'TwitterAndroid[/]?([\d\.]+)?'
+  name: 'Twitter'
+  version: '$1'
+
+-
   regex: 'TopBuzz/([\d\.]+)'
   name: 'TopBuzz'
   version: '$1'
