--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -235,3 +235,17 @@
     type: mobile app
     name: LinkedIn
     version: "9.7.1681"
+
+-
+  user_agent: Twitter/7.57 CFNetwork/978.0.7 Darwin/18.7.0
+  client:
+    type: mobile app
+    name: Twitter
+    version: "7.57"
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; SM-G950F Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3987.117 Mobile Safari/537.36 TwitterAndroid
+  os:
+  client:
+    type: mobile app
+    name: Twitter
+    version: ""
