feat(device) detect brand Ulefone models: Armor X5, Armor 5S

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12884,6 +12884,10 @@ Ulefone:
       model: 'Armor 6S'
     - regex: 'Armor[ _]6[);\ ]'
       model: 'Armor 6'
+    - regex: 'Armor[ _]X5[);\ ]'
+      model: 'Armor X5'
+    - regex: 'Armor[ _]5S[);\ ]'
+      model: 'Armor 5S'
     - regex: 'Armor[ _]X[);\ ]'
       model: 'Armor X'
     - regex: 'Armor[);\ ]'
