feat(device) detect new brand Lenovo models: A4 Lite, A4 Pro, A4, A3
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16489,3 +16489,8 @@ MiXzo:
   regex: 'MiXzo ME1030_3G[);/ ]'
   device: 'tablet'
   model: 'ME1030 3G'
+
+Openbox:
+  regex: 'Openbox (A[34](?: (?:Pro|Lite))?)[);/ ]'
+  device: 'tv'
+  model: '$1'
