feat(device) detect new brand Ziox model: F9 Pro
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16490,7 +16490,14 @@ MiXzo:
   device: 'tablet'
   model: 'ME1030 3G'
 
+# Openbox
 Openbox:
   regex: 'Openbox (A[34](?: (?:Pro|Lite))?)[);/ ]'
   device: 'tv'
   model: '$1'
+
+# Ziox
+Ziox:
+  regex: 'ZIOX_F9_PRO[);/ ]'
+  device: 'smartphone'
+  model: 'F9 Pro'
