--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -3916,5 +3916,26 @@
     model: A3
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; arm; Android 7.0; ZIOX_F9_PRO) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 YaBrowser/19.10.1.100.00 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    short_name: YA
+    version: 19.10.1.100.00
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: ZX
+    model: F9 Pro
+  os_family: Android
+  browser_family: Unknown
+
 
 
