feat(device) detect brand Vertu model: Aster P feat(device) detect brand Maxwest model: Astro X55s feat(device) detect brand Ziox model: Astra Viva 4G
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8291,13 +8291,15 @@ Masstel:
 
 # Maxwest
 Maxwest:
-  regex: 'Astro_5N_LTE|Virtue Z5'
+  regex: 'Astro_5N_LTE|Virtue Z5|Astro X55s'
   device: 'smartphone'
   models:
     - regex: 'Astro_5N_LTE'
       model: 'Astro 5N LTE'
     - regex: 'Virtue Z5'
       model: 'Virtue Z5'
+    - regex: 'Astro X55s'
+      model: 'Astro X55s'
 
 # Maze
 Maze:
@@ -13061,9 +13063,14 @@ Vernee:
 
 # Vertu
 Vertu:
-  regex: 'Vertu[ ]?([a-z0-9]+)'
+  regex: 'Vertu[ ]?([a-z0-9]+)|ASTER P[/;) ]'
   device: 'feature phone'
-  model: '$1'
+  models:
+    - regex: 'ASTER P[/;) ]'
+      device: 'smartphone'
+      model: 'Aster P'
+    - regex: 'Vernee[ _-]([a-z0-9_-]+)'
+      model: '$1'
 
 # Venso mobile
 Venso:
@@ -16498,6 +16505,10 @@ Openbox:
 
 # Ziox
 Ziox:
-  regex: 'ZIOX_F9_PRO[);/ ]'
+  regex: 'ZIOX[_ ]|(?:Astra Viva 4G)[);/ ]'
   device: 'smartphone'
-  model: 'F9 Pro'
+  models:
+    - regex: 'ZIOX_F9_PRO[);/ ]'
+      model: 'F9 Pro'
+    - regex: 'Astra Viva 4G[);/ ]'
+      model: 'Astra Viva 4G'
