feat(bot) detect bot: Semantic Scholar Bot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3789,3 +3789,10 @@
     category: Service bot
     url: https://www.admantx.com/service-fetcher.html
 
+-
+  user_agent: Mozilla/5.0 (compatible) SemanticScholarBot (+https://www.semanticscholar.org/crawler)
+  bot:
+    name: Semantic Scholar Bot
+    category: Crawler
+    url: https://www.semanticscholar.org/crawler
+
