--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2087,6 +2087,11 @@
   category: 'Service bot'
   url: 'https://www.admantx.com/service-fetcher.html'
 
+- regex: 'SemanticScholarBot'
+  name: 'Semantic Scholar Bot'
+  category: 'Crawler'
+  url: 'https://www.semanticscholar.org/crawler'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
