feat(bot) detect bot: Barkrowler

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2097,6 +2097,11 @@
   category: 'Crawler'
   url: 'https://hunter.io/robot'
 
+- regex: 'Barkrowler'
+  name: 'Barkrowler'
+  category: 'Crawler'
+  url: 'http://www.exensa.com/crawl'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
