--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3803,4 +3803,11 @@
     category: Crawler
     url: https://hunter.io/robot
 
+-
+  user_agent: Barkrowler/0.9 (+http://www.exensa.com/crawl)
+  bot:
+    name: Barkrowler
+    category: Crawler
+    url: http://www.exensa.com/crawl
+
 
