feat(device) detect brand Qilive models: Q8 10.1" (Q8T10IN), Q7 10.1" (Q7T10INP), Q7 5.5" 4G (Q7S55IN4G)
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11960,11 +11960,13 @@ Sanyo:
 
 # Qilive (Auchan)
 Qilive:
-  regex: 'Qilive [0-9][^;/]*|Q(7S5IN4G|8S55IN4G2|8S[56]IN4G|10S5[37]IN4G|10S[56]IN4G|10S[56]IN4GR|9S5IN4G|6T7IN)'
+  regex: 'Qilive [0-9][^;/]*|Q(7S5[5]?IN4G|7T10INP|8T10IN|8S55IN4G2|8S[56]IN4G|10S5[37]IN4G|10S[56]IN4G|10S[56]IN4GR|9S5IN4G|6T7IN)'
   device: 'smartphone'
   models:
     - regex: 'Q7S5IN4G'
       model: 'Q7 5.0" 4G'
+    - regex: 'Q7S55IN4G'
+      model: 'Q7 5.5" 4G'
     - regex: 'Q8S55IN4G2'
       model: 'Q8 5.5" 4G'
     - regex: 'Q8S6IN4G'
@@ -11983,6 +11985,12 @@ Qilive:
       model: 'Q10 6.0" 4G'
     - regex: 'Q6T7IN'
       model: 'Q6'
+      device: 'tablet'
+    - regex: 'Q7T10INP'
+      model: 'Q7 10.1"'
+      device: 'tablet'
+    - regex: 'Q8T10IN'
+      model: 'Q8 10.1"'
       device: 'tablet'
     - regex: 'Qilive ([0-5][^;/]*) Build'
       model: '$1'
