feat(device) detect new brand iDroid model: Apache G6
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16520,3 +16520,9 @@ Ziox:
       model: 'F9 Pro'
     - regex: 'Astra Viva 4G[);/ ]'
       model: 'Astra Viva 4G'
+
+# iDroid
+iDroid:
+  regex: 'APACHE G6[);/ ]'
+  device: 'smartphone'
+  model: 'Apache G6'
